Changed the styling for any icons that are clickable to be the correct colour. Fixed spacing on userPosts and reviews.

--- a/styles/eachPark-pupsPlaying.css
+++ b/styles/eachPark-pupsPlaying.css
@@ -50,10 +50,10 @@
 /* Rating styles */
 
 .filled-star {
-    color: #ffc700;
+    color: #fd5821;
 }
 
 /* Outline star color */
 .outline-star {
-    color: #ccc
+    color: #fd5821;
 }
